bookstore-k8s/cronjob-backup.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bookstore
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
