bookstore-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bookstore
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
